fix hero section mobile

--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -4,6 +4,7 @@
 :root {
     /* colours */
     --primary-bg: #fff;
+    --navigation-bg: rgba(255, 255, 255, 0.1);
     --primary-text: #000;
     --primary-info-bg: #f0f0f0;
     --secondary-info-bg: #333;
